# nasa_r2_simulator

./: .gitignore  CMakeLists.txt  stack.xml
gazebo_gripper/: CMakeLists.txt  package.xml  package.xml.NOBUILD
gazebo_gripper/gazebo_gripper/: CMakeLists.txt  package.xml
gazebo_gripper/include/: GazeboGripper.h
gazebo_gripper/include/gazebo_gripper/: GazeboGripper.h
gazebo_gripper/src/: .GazeboGripper.cpp.swp  GazeboGripper.cpp
gazebo_gripper/src/gazebo_gripper/: GazeboGripper.cpp
gazebo_interface/: CMakeLists.txt  manifest.xml  package.xml  package.xml.NOBUILD
gazebo_interface/gazebo_interfaces/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
gazebo_interface/include/: GazeboInterface.h  JointController.h  RobotController.h
gazebo_interface/include/gazebo_interface/: GazeboInterface.h  JointController.h  RobotController.h
gazebo_interface/src/: GazeboInterface.cpp  JointController.cpp  RobotController.cpp
gazebo_interface/src/gazebo_interface/: GazeboInterface.cpp  JointController.cpp  RobotController.cpp
gazebo_taskboard/: CMakeLists.txt  mainpage.dox  package.xml  package.xml.NOBUILD
gazebo_taskboard/include/: GazeboTaskboard.h
gazebo_taskboard/include/gazebo_taskboard/: GazeboTaskboard.h
gazebo_taskboard/src/: GazeboTaskboard.cpp
gazebo_taskboard/src/gazebo_taskboard/: GazeboTaskboard.cpp
gazebo_taskboard/src/gazebo_taskboard/srv/: _ManipulateNumPad.py  _ManipulatePowerCover.py  _ManipulatePowerSwitch.py  _ManipulateRockerSwitch.py  _ManipulateSafeToggle.py  __init__.py
gazebo_taskboard/srv_gen/lisp/: _package.lisp  gazebo_taskboard-srv.asd
nasa_r2_simulator/: CMakeLists.txt  package.xml
r2_controllers_gazebo/: CMakeLists.txt  Makefile  controller_plugins.xml  manifest.xml  package.xml  r2_controller2_gazebo_plugins.xml
r2_controllers_gazebo/config/: r2_gaze_controller.yaml
r2_controllers_gazebo/include/: TreeChain.h  r2_gaze_controller.hpp  r2_impedance_controller.h  r2_joint_trajectory_action_controller.h  treeidsolver_recursive_newton_euler.hpp
r2_controllers_gazebo/include/r2_controllers_gazebo/: TreeChain.h  WholeBodyCalc.h  r2_gaze_controller.hpp  r2_gaze_ik.hpp  r2_impedance_controller.h  r2_joint_trajectory_action_controller.h  treeidsolver.hpp  treeidsolver_recursive_newton_euler.hpp
r2_controllers_gazebo/launch/: r2_gaze_controller.launch
r2_controllers_gazebo/nodes/: r2_gazebo_controller_test.py  r2_readypose.py
r2_controllers_gazebo/src/: r2_gaze_controller.cpp  r2_gaze_ik.cpp  r2_impedance_controller.cpp  r2_joint_trajectory_action_controller.cpp  treeidsolver_recursive_newton_euler.cpp
r2_gazebo/: CMakeLists.txt  generateXml.sh  manifest.xml  package.xml  setup.sh
r2_gazebo/Media/materials/scripts/: Gazebo.material
r2_gazebo/Media/models/ISS/: US_Lab_ISS_half.dae  US_Lab_ISS_quarter.dae
r2_gazebo/Media/models/taskboard/: cable_link.dae  cable_link1.dae  cable_link2.dae  cable_link3.dae  cable_link4.dae  cable_link5.dae  tskbd_lower_assembly_labels.dae  tskbd_lower_assembly_robonaut.dae  tskbd_panel_assembly_eva_slot3.dae  tskbd_panel_assembly_eva_slot3_labels.dae  tskbd_panel_assembly_eva_slot3_panel.dae  tskbd_panel_assembly_slot1_a1.dae  tskbd_panel_assembly_slot1_a2.dae  tskbd_panel_assembly_slot1_a3.dae  tskbd_panel_assembly_slot1_b1.dae  tskbd_panel_assembly_slot1_b2.dae  tskbd_panel_assembly_slot1_b3.dae  tskbd_panel_assembly_slot1_blackplate.dae  tskbd_panel_assembly_slot1_c1.dae  tskbd_panel_assembly_slot1_c2.dae  tskbd_panel_assembly_slot1_c3.dae  tskbd_panel_assembly_slot1_guard.dae  tskbd_panel_assembly_slot1_labels.dae  tskbd_panel_assembly_slot1_panel.dae  tskbd_panel_assembly_slot1_switch.dae  tskbd_panel_assembly_slot1_switch1.dae  tskbd_panel_assembly_slot1_switch2.dae  tskbd_panel_assembly_slot1_switch3.dae  (+22 more)
r2_gazebo/config/controllers/: r2_generic_traj_control.yaml  r2_impedance_controller.yaml  r2_joint_trajectory_controller.yaml  r2sim_legs_params.yaml  r2sim_torso_params.yaml
r2_gazebo/gazebo/: r2_ISS.world  r2_ISS_simple.world  r2_empty.world
r2_gazebo/launch/: empty_ISS.launch  empty_ISS_simple.launch  empty_world.launch  empty_world_no_gravity.launch  iss.launch  main.launch  r2_ISS.launch  r2_ISS_simple.launch  r2_ISS_taskboard.launch  r2_display.launch  r2_display_controller.launch  r2_drills.launch  r2_echo.launch  r2_echo_controller.launch  r2_empty.launch  r2_fullbody.launch  r2_fullbody_gazebo.launch  r2_gazebo.launch  r2_orocos.launch  r2_orocos_controller.launch  r2_rviz.launch  r2_taskboard.launch  r2_valve.launch  r2c_full.launch  r2c_full_ISS_simple.launch  r2c_full_ISS_simple_controller.launch  r2c_full_body.launch  r2c_full_controller.launch  r2c_legs.launch  r2c_legs_controller.launch  r2c_legs_display.launch  r2c_legs_display_controller.launch  r2c_torso.launch  r2c_torso_controller.launch  r2c_torso_table.launch  r2c_torso_table_controller.launch  r2c_torso_taskboard.launch  r2c_torso_taskboard_controller.launch  taskboard.launch  taskboard_only.launch
r2_gazebo/lost_found/: octomap_and_sr.txt
r2_gazebo/robots/: proto_legs_control.urdf.xml  r2.display.urdf.xacro  r2.sim.urdf  r2.sim.urdf.xacro  r2.urdf.xacro  r2_fullbody.sim.urdf.xacro  r2_orocos.sim.urdf.xacro  r2c_full_body.sim.urdf.xacro  r2c_full_body_ISS.sim.urdf.xacro  r2c_legs.display.urdf.xacro  r2c_legs.sim.urdf.xacro  r2c_legs_control.urdf.xacro  r2c_torso.sim.urdf.xacro
r2_gazebo/urdf/: ISS.urdf  r2.gazebo.xacro  r2c_full_body.controller.xacro  taskboard.lower.xacro  taskboard.urdf.xacro  taskboard_B01.urdf.xacro  taskboard_B05.urdf.xacro
r2_gazebo/urdf/gazebo_plugins/: gazebo_interface.xacro  leg_grippers.xacro  p3d_base_controller.xacro  r2.gazebo.controller.xacro  r2.transmissions.xacro  taskboard.panel_a.controller.xacro
r2_gazebo/urdf/models/: r2.body.xacro  r2c_full_body_no_world.urdf.xacro  r2c_legs.urdf.xacro  r2c_upper_body.urdf.xacro  r2c_upper_body_stand.urdf.xacro
r2_gazebo/urdf/sensors/: asus.gazebo.xacro  camera.gazebo.xacro  grasshopper2.gazebo.xacro  hokuyo_lx30_laser.gazebo.xacro  hokuyo_lx30_laser.urdf.xacro  r2.gazebo.sensors.xacro  r2c_legs.gazebo.sensors.xacro
(+17 files in other folders)
