<?xml version="1.0"?>
<package>
  <name>gazebo_gripper</name>
  <version>0.0.0</version>
  <description>The gazebo_gripper package</description>
  <maintainer email="todo@todo.todo">TCSASSEMBLER</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/gazebo_gripper</url>
  <author>rctaylo2</author>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <gazebo plugin_path="${prefix}/lib" />
  </export>
</package>
