<?xml version="1.0"?>
<package>
  <name>gazebo_interface</name>
  <version>0.5.1</version>
  <description>The gazebo_interface package</description>
  <maintainer email="davidvlu@gmail.com">David Lu!!</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/gazebo_interface</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>r2_msgs</build_depend>
  <build_depend>SDFormat</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>r2_msgs</run_depend>
  <run_depend>SDFormat</run_depend>

  <export>
    <gazebo plugin_path="${prefix}/lib" />
  </export> 
</package>


