<?xml version="1.0"?>
<package>
  <name>gazebo_taskboard</name>
  <version>0.5.2</version>
  <description>The gazebo_taskboard package</description>
  <maintainer email="davidvlu@gmail.com">David Lu!!</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/gazebo_taskboard</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>

  <export>
    <gazebo plugin_path="${prefix}/lib" />
  </export>
</package>
