<package>
  <name>r2_controllers_gazebo</name>
  <version>0.5.2</version>
  <description>r2_controllers_gazebo</description>

  <maintainer email="davidvlu@gmail.com">David Lu!!</maintainer>
  <license>BSD</license>

  <url></url>
  <url type="website">http://ros.org/wiki/r2_controllers_gazebo</url>
  <url type="bugtracker">http://ros.org/wiki/r2_controllers_gazebo</url>
  <url type="repository">http://ros.org/wiki/r2_controllers_gazebo</url>

  <author>Stephen Hart</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_interface</build_depend> 
  <build_depend>control_msgs</build_depend> 
  <build_depend>control_toolbox</build_depend> 
  <build_depend>realtime_tools</build_depend> 
  <build_depend>urdf</build_depend> 

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>filters</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_kdl</build_depend>

  <build_depend>tf_conversions</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>kdl_parser</build_depend>

  <build_depend>eigen_conversions</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>actionlib</build_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <build_depend>message_filters</build_depend>
  <build_depend>control_msgs</build_depend>

  <build_depend>r2_msgs</build_depend>

  <build_depend>effort_controllers</build_depend>
  <build_depend>joint_state_controller</build_depend>

  <run_depend>controller_interface</run_depend> 
  <run_depend>control_msgs</run_depend> 
  <run_depend>control_toolbox</run_depend> 
  <run_depend>realtime_tools</run_depend> 
  <run_depend>urdf</run_depend> 

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>filters</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_kdl</run_depend>

  <run_depend>tf_conversions</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>kdl_parser</run_depend>

  <run_depend>eigen_conversions</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>actionlib</run_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>

  <run_depend>message_filters</run_depend>
  <run_depend>control_msgs</run_depend>

  <run_depend>r2_msgs</run_depend>

  <run_depend>effort_controllers</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_ros_pkgs</run_depend>

  <export>
    <controller_interface plugin="${prefix}/r2_controllers_gazebo_plugins.xml" />
    <python path="${prefix}/nodes"/>
    <python path="${prefix}/src"/>
  </export> 
</package>
